--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       width: 100%;
       min-height: 100vh;
       overflow-x: hidden;
-      box-sizing: border-box;
+      /* box-sizing: border-box; */
       @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
     }
   </style>
